--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
+    "glob": "^7.0.3",
     "hbs": "^4.0.0",
     "morgan": "^1.7.0",
+    "mysql": "^2.10.2",
     "pm2": "^1.1.3"
   },
   "devDependencies": {
